# SimpleIrcRelay

./: .gitignore  pyproject.toml
simpleircrelay/: bot.py  module.py
