[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleircrelay"
version = "1.0"
dependencies = [
  "irc",
  "aiohttp",
  "aiosmtplib",
  "requests"
]
requires-python = ">=3.10"

[project.scripts]
simpleircrelay = "simpleircrelay.bot:bot_main"

[project.entry-points."trac.plugins"]
simpleircrelay = "simpleircrelay.module"
